Lock Node.js version to 18.17.0 to resolve Vercel warnings

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "buildCommand": "npm run build",
   "devCommand": "vite",
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
+  "nodeVersion": "18.x",
   "env": {
     "NODE_ENV": "production"
   },
