--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "18.17.0",
+    "npm": ">=9.0.0"
   },
   "scripts": {
     "dev": "vite",
